--- a/Linux.mw
+++ b/Linux.mw
@@ -29,7 +29,7 @@ Linux წარმატებით შეიძლება გამოვი
 ==რესურსები ინტერნეტში==
 *[http://www.linux.ge/ ლინუქსი საქართველოში]
 *[http://www.gia.ge/ საქართველოს ინერნეტ ალიანსი, ლინუქსის გარსის გაქართულების ღია პროექტი]
-
+*[http://www.kernel.org/ ლინუქსის ბირთვის ოფიციალური ვებ-გვერდი]
 
 
 [[კატეგორია:ოპერაციული სისტემები]]
