--- a/Linux.mw
+++ b/Linux.mw
@@ -19,7 +19,7 @@ Linux შექმნილია მრავალრიცხოვან UNI
 Linux თავდაპირველად შეიქმნა [[ინტელი (პროცესორი)|ინტელის]] [[32 ბიტი|32-ბიტიანი]] [[x86]]-ბაზაზე შექმნილ [[386]] ან უფრო მძლავრ [[პროცესორი|პროცესორებზე]] სამუშაოდ. ამჟამად Linux ასევე შემდეგი პლატფორმის მანქანებზეც მუშაობს: [[Compaq Alpha AXP]], [[Sun SPARC]], [[UltraSPARC]], [[Motorola 680x0]], [[PowerPC]], [[PowerPC64]], [[ARM]], [[Hitachi SuperH]], [[IBM S/390]], [[MIPS]], [[HP PA-RISC]], [[Intel IA-64]], [[DEC VAX]], [[AMD x86-64]], [[CRIS]].
 
 ==გამოყენება==
-[[სურათი:Biglinux1.png|thumb|right|250px|ლინუქსის ეკრანი]]
+[[სურათი:Biglinux1.png|thumb|right|250px|ლინუქსის ეკრანი (KDE გარემო)]]
 Linux წარმატებით შეიძლება გამოვიყენოთ, როგორც [[სამუშაო სადგური|სამუშაო სადგურად]], ასევე [[სერვერი|სერვერის]] პლატფორმად. დღესდღეობით Linux UNIX მაგვარი ოპერაციული სისტემების ღირსეული [[კლონი|კლონია]]. Linux სრულყოფილი მრავალფუნქციონალური [[მრავალამოცანიანი ოპერაციული სისტემა|მრავალამოცანიანი ოპერაციული სისტემაა]], რომელიც წარმატებით ართმევს თავს თანამედროვე [[საინფორმაიციო ტექნოლოგიები|საინფორმაციო ტექნოლოგიების]] მზარდ მოთხოვნილებებს. მასზე შესაძლებელია [[X Windows]]-ის [[გრაფიკული გარემო|გრაფიკულ გარემოში]] და console ([[ბრძანებათა სტრიქონი|ბრძანებათა სტრიქონში]]) მოხერხებული მუშაობა. Linux-ის მომხმარებელთათვის არსებობს თანამედროვე გრაფიკული და საოფისე პროგრამები, ასევე მათთვის ინტერნეტში სრულყოფილად სამუშაოდ უამრავი პროგრამა, რომლითაც შესაძლებელია [[ვებ-გვერდი|ვებ-გვერდების]] დათვალიერება, [[ელ-ფოსტა|ელექტრონული ფოსტის]] მიღება და გაგზავნა, [[IRC]], [[ICQ]], [[Yahoo Messenger]], [[AOL Instant Messenger]], [[MSN Messanger]] და სხვა პოპულარული საკომუნიკაციო საშუალებების გამოყენება.
 
 არანაკლები რაოდენობით არსებობს პროგრამირებით დაინტერესებულ პირთათვის განკუთვნილი პროფესიონალური დონის გრაფიკული ინტერფეისიანი პროგრამული პროდუქტები. ამასთან პროგრამული უზრუნველყოფის სრული სპექტრი არსებობს Linux-ის როგორც ინტერნეტ, ბეჭდვით თუ ფაილ სერვერად გამოსაყენებლად. Linux-ისთვის არსებობს უმძლავრესი პროგრამული პროდუქტები მონაცემთა ბაზების შესაქმნელად, რომლის ნათელი მაგალითია კომპანია [[Oracle]], რომელიც თავის პროდუქციას სხვა ოპერაციულ სისტემებთან ერთად ასევე Linux პლატფორმისათვის ქმნის.
