--- a/Linux.mw
+++ b/Linux.mw
@@ -14,7 +14,7 @@ Linux შექმნილია მრავალრიცხოვან UNI
 
 0.03 ვერსიაზე მუშაობის დამთავრების შემდეგ ლინუსმა მომდევნო ვერსიას პირდაპირ მიანიჭა 0.10 ნომერი, ვინაიდან იმ დროისათვის პროექტზე უკვე საკმაო რაოდენობის ხალხი მუშაობდა და ბევრი რამ დაიხვეწა.
 
-[[1992]] წლის მარტში ტესტირების სტადიაში მყოფი ოპერაციული სისტემის ვერსიების რამდენიმეჯერ გადახედვის შემდეგ ახალ შექმნილ ვერსიას ამჯერად 0.95 ნომერი მიენიჭა, რითაც ლინუსმა მიანიშნა, რომ მალე შესაძლებელი იქნებოდა "ოფიციალური" ვერსიის გამოსვლაზე განაცხადის გაკეთება. დაახლოებით წელიწადნახევრის შემდეგ [[1993]] წლის დეკემბერში Linux-ის ვერსიის ნომერი უკვე 0.99.pl14 იყო, რაც გახდა საწინდარი იმისა, რომ სულ მალე გამოვიდოდა უკვე ნამდვილად ოფიციალური სტაბილური ვერსია 1.0, რაც [[1994]] წელს მოხდა კიდეც. დღეისთვის Linux-ის მიმდინარე ვერსია არის 2.6.x, რომელიც [[2004]] წელს გამოვიდა და ამჟამადაც გრძელდება მასზე მუშაობა. (არ უნდა აგვერიოს Linux-ის ვერსიები დისტრიბუტივების ვერსიებში, მაგ. [[Red Hat 7.3]] ან [[Mandrake 8.2]]. [[ლინუქსის_დისტრიბუტივები|დისტრიბუტივები]] ცალკე განხილვის თემა გახლავთ).
+[[1992]] წლის მარტში ტესტირების სტადიაში მყოფი ოპერაციული სისტემის ვერსიების რამდენიმეჯერ გადახედვის შემდეგ ახალ შექმნილ ვერსიას ამჯერად 0.95 ნომერი მიენიჭა, რითაც ლინუსმა მიანიშნა, რომ მალე შესაძლებელი იქნებოდა "ოფიციალური" ვერსიის გამოსვლაზე განაცხადის გაკეთება. დაახლოებით წელიწადნახევრის შემდეგ [[1993]] წლის დეკემბერში Linux-ის ვერსიის ნომერი უკვე 0.99.pl14 იყო, რაც გახდა საწინდარი იმისა, რომ სულ მალე გამოვიდოდა უკვე ნამდვილად ოფიციალური სტაბილური ვერსია 1.0, რაც [[1994]] წელს მოხდა კიდეც. დღეისთვის Linux-ის მიმდინარე ვერსია არის 2.6.x, რომელიც [[2004]] წელს გამოვიდა და ამჟამადაც გრძელდება მასზე მუშაობა. (არ უნდა აგვერიოს Linux-ის ვერსიები [[ლინუქსის_დისტრიბუტივები|დისტრიბუტივების]] ვერსიებში, მაგ. [[Red Hat 7.3]] ან [[Mandrake 8.2]]. [[ლინუქსის_დისტრიბუტივები|დისტრიბუტივი]] წარმოადგენს ლინუქსის ბირთვის და პროგრამების ცალკეულ პაკეტს და ცალკე განხილვის თემა გახლავთ.
 
 Linux თავდაპირველად შეიქმნა [[ინტელი (პროცესორი)|ინტელის]] [[32 ბიტი|32-ბიტიანი]] [[x86]]-ბაზაზე შექმნილ [[386]] ან უფრო მძლავრ [[პროცესორი|პროცესორებზე]] სამუშაოდ. ამჟამად Linux ასევე შემდეგი პლატფორმის მანქანებზეც მუშაობს: [[Compaq Alpha AXP]], [[Sun SPARC]], [[UltraSPARC]], [[Motorola 680x0]], [[PowerPC]], [[PowerPC64]], [[ARM]], [[Hitachi SuperH]], [[IBM S/390]], [[MIPS]], [[HP PA-RISC]], [[Intel IA-64]], [[DEC VAX]], [[AMD x86-64]], [[CRIS]].
 
