*Empty MediaWiki Message*

--- a/Linux.mw
+++ b/Linux.mw
@@ -1,4 +1,4 @@
-'''ლინუქსი''' (Linux) წარმოადგენს მრავალფუნქციონალურ მძლავრ უფასო ოპერაციულ სისტემას, რომელიც [[იუნიქსი|იუნიქსის]] ([[UNIX]]) მაგვარი [ოპერაციული სისტემა|ოპერაციული სისტემების] ერთ-ერთ ნაირსახეობაა. [[ოპერაციული სისტემა]] UNIX შეიქმნა სამოციან წლებში, კომპანია [[ბელ ლაბსი|ბელ ლაბსის]] ([[Bell Labs]]) (ამჟამად [[AT&T Bell Laboratories]]) მიერ.
+'''ლინუქსი''' (Linux) წარმოადგენს მრავალფუნქციონალურ მძლავრ უფასო ოპერაციულ სისტემას, რომელიც [[იუნიქსი|იუნიქსის]] (UNIX) მაგვარი [ოპერაციული სისტემა|ოპერაციული სისტემების] ერთ-ერთ ნაირსახეობაა. [[ოპერაციული სისტემა]] UNIX შეიქმნა სამოციან წლებში, კომპანია [[ბელ ლაბსი|ბელ ლაბსის]] (Bell Labs) (ამჟამად [[AT&T Bell Laboratories]]) მიერ.
 
 UNIX-ის შექმნისას გათვალისწინებული იქნა მისი [მულტიპლატფორმული ოპერაციული სისტემა|მულტიპლატფორუმულ ოპერაციულ სისტემად] ჩამოყალიბება, 
 ანუ უნდა ყოფილიყო შესაძლებელი მისი სხვადასხვა არქიტექტურის მანქანებზე უპრობლემოდ მუშაობა. 
