*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_პ.mw
+++ b/ცნობილი_ქართველები:_პ.mw
@@ -14,7 +14,7 @@
 * [[პაპინაშვილი, კონსტანტინე]] - გეოფიზიკოსი
 * [[პაპიტაშვილი, მიხეილ]] - მეან-გინეკოლოგი
 * [[პაპიძე, ვლადიმერ]] - საბჭოთა კავშირის გმირი
-* [[პაპუაშვილი, გიორგი ()]] - საბჭოთა კავშირის გმირი
+* [[პაპუაშვილი, გიორგი იასონის ძე]] - საბჭოთა კავშირის გმირი
 * [[პაპუაშვილი, გიორგი]] - თანამედროვე პოლიტიკური მოღვაწე, იურისტი
 * [[პაპუაშვილი, შალვა]] - მთარგმნელი
 * [[პაპუნაშვილი, მიხეილ]] - რევოლუციური მოძრაობის მოღვაწე საქართველოში
@@ -23,12 +23,12 @@
 * [[პარკაძე, ვახტანგ]] - ფიზიკოსი
 * [[პატარაია, გურამ]] - კინორეჟისორი და კინოდრამატურგი
 * [[პატარიძე, ივანე]] - რეჟისორი და პედაგოგი
-* [[პატარიძე, მიქელ]] - პოეტი, მტარგმნელი
+* [[პატარიძე, მიქელ]] - პოეტი, მთარგმნელი
 * [[პაჭკორია, კირილე]] - ხალხური მომღერალი
 * [[პაჭკორია, ოტია]] - მწერალი, კრიტიკოსი
 
 ==პე==
-* [[პეტრე, V ს.]] - ქართლის პირველი კათალიკოსი
+* [[პეტრე, V ს.]] - ქართლის პირველი კათოლიკოსი
 * [[პეტრე, XI ს.]] - საქართველოს მწიგნობართუხუცესი
 * [[პეტრე გელათელი]] - ჰიმნოგრაფი
 * [[პეტრე იბერი]] - თეოლოგი და ფილოსოფოსი
