*Empty MediaWiki Message*

--- a/Linux.mw
+++ b/Linux.mw
@@ -1,8 +1,6 @@
-'''ლინუქსი''' (Linux) წარმოადგენს მრავალფუნქციონალურ მძლავრ უფასო ოპერაციულ სისტემას, რომელიც [[იუნიქსი|იუნიქსის]] (UNIX) მაგვარი [ოპერაციული სისტემა|ოპერაციული სისტემების] ერთ-ერთ ნაირსახეობაა. [[ოპერაციული სისტემა]] UNIX შეიქმნა სამოციან წლებში, კომპანია [[ბელ ლაბსი|ბელ ლაბსის]] (Bell Labs) (ამჟამად [[AT&T Bell Laboratories]]) მიერ.
+'''ლინუქსი''' (Linux) წარმოადგენს მრავალფუნქციონალურ მძლავრ უფასო ოპერაციულ სისტემას, რომელიც [[იუნიქსი|იუნიქსის]] (UNIX) მაგვარი ოპერაციული სისტემების ერთ-ერთ ნაირსახეობაა. [[ოპერაციული სისტემა]] UNIX შეიქმნა სამოციან წლებში, კომპანია [[ბელ ლაბსი|ბელ ლაბსის]] (Bell Labs) (ამჟამად [[AT&T Bell Laboratories]]) მიერ.
 
-UNIX-ის შექმნისას გათვალისწინებული იქნა მისი [მულტიპლატფორმული ოპერაციული სისტემა|მულტიპლატფორუმულ ოპერაციულ სისტემად] ჩამოყალიბება, 
-ანუ უნდა ყოფილიყო შესაძლებელი მისი სხვადასხვა არქიტექტურის მანქანებზე უპრობლემოდ მუშაობა. 
-სწორედ მისმა [[მულტიპლატფორმულობა|მულტიპლატფორმულობამ]] განაპირობა UNIX-ის უდიდესი პოპულარულობა. UNIX-ის პოპულარულობასთან ერთად სხვადასხვა კომპანიებმა დაიწყეს UNIX-ის ბაზაზე [[ოპერაციული სისტემა|ოპერაციული სისტემების]] შექმნა.
+UNIX-ის შექმნისას გათვალისწინებული იქნა მისი [[მულტიპლატფორმული ოპერაციული სისტემა|მულტიპლატფორუმულ ოპერაციულ სისტემად]] ჩამოყალიბება, ანუ უნდა ყოფილიყო შესაძლებელი მისი სხვადასხვა არქიტექტურის მანქანებზე უპრობლემოდ მუშაობა. სწორედ მისმა [[მულტიპლატფორმულობა|მულტიპლატფორმულობამ]] განაპირობა UNIX-ის უდიდესი პოპულარულობა. UNIX-ის პოპულარულობასთან ერთად სხვადასხვა კომპანიებმა დაიწყეს UNIX-ის ბაზაზე ოპერაციული სისტემების შექმნა.
 
 ==შექმნის ისტორია==
 [[სურათი:Linus Torvalds.jpeg|thumb|right|ლინუს ტორვალდსი, ლინუქსის ძირითადი შემქმნელი]]
@@ -10,7 +8,7 @@ Linux არის თავისუფალად გავრცელებ
 
 Linux შექმნილია მრავალრიცხოვან UNIX პროგრამისტთა და ინტერნეტის ქსელში მომუშავე ენთუზიასტთა დახმარებით. მასში არ არის გამოყენებული AT&T UNIX-ის პროგრამული კოდი, ასევე არც ერთი სხვა UNIX-ის პროგრამული კოდი. Linux-ის მეტი წილი პროგრამები შექმნილია [[GNU Free Software Foundation]] პროექტის ჩარჩოში, [[კემბრიჯი|კემბრიჯში]], [[მასაჩუსეტსი]], თუმცა მის შექმნაში ასევე მონაწილეობა თითქმის მთელი მსოფლიოს პროგრამისტებმა მიიღეს. აღსანიშნავია ისიც, რომ Linux-ის ბაზაზე შექმნილი პროგრამების უმეტესობა არის [[ღია კოდი|ღია პროგრამული კოდით]] (open source) და ამასთან უფასოა. 0.01 ვერსიის Linux-ის გამოჩენისას არასდროს არ გაკეთებულა ოფიციალური განცხადება მისი შექმნის თაობაზე, 0.01 ვერსიის პროგრამული წყარო, [[პროგრამის კოდი|პროგრამის კოდის]] ნორმალური შესრულების შესაძლებლობასაც კი არ იძლეოდა და მიუთითებდა იმაზე, რომ მომხმარებელი მიმართავდა Minix მანქანას. ეს მისი (Linux) [[კომპილირება|კომპილირებისა]] თუ სრულყოფის შესაძლებლობას იძლეოდა.
 
-[[1991]] წლის 5 ნოემბერს ლინუსმა "ოფიციალურად" განაცხადა Linux-ის 0.02 ვერსიის გამოსვლის თაობაზე. მიუხედავად ამისა, ეს ისევ განიხილებოდა როგორც მორიგი ექსპერიმენტებისათვის განკუთვნილი [[ოპერაციული სისტემა]]. ძირითადად ყურადღება დაეთმო სისტემის [[ბირთვის]] (kernel) დახვეწას, არანაირი ყურადღება არ ექცეოდა რიგით მომხმარებელთათვის მასთან მუშაობის უზრუნვეყოფას, არ მოხდა სისტემის [[დოკუმენტირება|დოკუმენტირების]] ტირაჟირება. ეს შემდეგმა გარემოებებმა განაპირობა: [[ოპერაციული სისტემა]] უნდა გამხდარიყო დამოუკიდებელი, არ ყოფილიყო საჭიროება შემდგომი ვერსიების Minix-ზე კომპილირება-სრულყოფისა.
+[[1991]] წლის 5 ნოემბერს ლინუსმა "ოფიციალურად" განაცხადა Linux-ის 0.02 ვერსიის გამოსვლის თაობაზე. მიუხედავად ამისა, ეს ისევ განიხილებოდა როგორც მორიგი ექსპერიმენტებისათვის განკუთვნილი [[ოპერაციული სისტემა]]. ძირითადად ყურადღება დაეთმო სისტემის [[ბირთვის]] (kernel) დახვეწას, არანაირი ყურადღება არ ექცეოდა რიგით მომხმარებელთათვის მასთან მუშაობის უზრუნვეყოფას, არ მოხდა სისტემის [[დოკუმენტირება|დოკუმენტირების]] ტირაჟირება. ეს შემდეგმა გარემოებებმა განაპირობა: ოპერაციული სისტემა უნდა გამხდარიყო დამოუკიდებელი, არ ყოფილიყო საჭიროება შემდგომი ვერსიების Minix-ზე კომპილირება-სრულყოფისა.
 
 0.03 ვერსიაზე მუშაობის დამთავრების შემდეგ ლინუსმა მომდევნო ვერსიას პირდაპირ მიანიჭა 0.10 ნომერი, ვინაიდან იმ დროისათვის პროექტზე უკვე საკმაო რაოდენობის ხალხი მუშაობდა და ბევრი რამ დაიხვეწა.
 
