*Empty MediaWiki Message*

--- a/ნატო_(მრავალმნიშვნელოვანი).mw
+++ b/ნატო_(მრავალმნიშვნელოვანი).mw
@@ -1,1 +1,7 @@
-#REDIRECT [[ნატო (ორგანიზაცია)]]
+საკუთარი სახელი ან ტერმინი '''ნატო''' შეიძლება აღნიშნავდეს:
+
+*[[ნატო (სახელი)|ნატო]] - სახელი, ნატალი, ნატალია-ს ქართული ვარიანტი
+*[[ნატო (ორგანიზაცია)|ნატო]] - ჩრდილოატლანტიკური თანამშრომლობის ორგანიზაციის აკრონიმი.
+
+
+{{მრავალმნიშვნელოვანი}}
