*Empty MediaWiki Message*

--- a/ზელიმხან_იანდარბიევი.mw
+++ b/ზელიმხან_იანდარბიევი.mw
@@ -5,7 +5,8 @@
 
 [[199]]1 წლის [[27 ოქტომბერი|27 ოქტომბერს]] ზ.იანდარბიევი არჩეულ იქნა ჩეჩნეთის პარლამენტის წევრად,სადაც იგი სათავეში ედგა მასობრივი ინფორმაციის საშუალებების საპარლამენტო  კომიტეტს.
 
-[[1993]] წლის [[17 აპრილი|17 აპრილს]], პრეზიდენტ [[დუდაევი, ჯოჰარ|ჯ. დუდაევის]] ბრძანებით იგი დაინიშნა ჩეჩნეთის ვიცე-პრეზიდენტის მოვალეობის შემსრულებლად. [[1995]] წლის იანვრის შუა რიცხვებში ხელმძღვანელობდა გროზნოს თავდაცვით ოპერაციას რუსეთის საოკუპაციო ჯარების წინააღმდეგ.
+[[1993]] წლის [[17 აპრილი|17 აპრილს]], პრეზიდენტ [[დუდაევი, ჯოჰარ|ჯ. დუდაევის]] ბრძანებით იგი დაინიშნა ჩეჩნეთის ვიცე-პრეზიდენტის მოვალეობის შემსრულებლად. 
+[[1995]] წლის იანვრის შუა რიცხვებში ხელმძღვანელობდა გროზნოს თავდაცვით ოპერაციას რუსეთის საოკუპაციო ჯარების წინააღმდეგ.
 
 [[1996]] წლის [[23 აპრილი|23 აპრილიდან]] პრეზიდენტ ჯ. დუდაევის დაღუპვის შემდეგ ცხრა თვის მანძილზე ასრულებდა იჩქერიის პრეზიდენტის მოვალეობას. [[1997]] წლის  [[27 იანვარი|27 იანვარს]] გამართულ საპრეზიდენტო არჩევნებში იანდარბიევი მესამე აღმოჩნდა [[მასხადოვი, ასლან|ა. მასხადოვისა]] და [[ბასაევი, შამილ|შ. ბასაევის]] შემდეგ.
 
