--- a/ხმელთაშუა_ზღვა.mw
+++ b/ხმელთაშუა_ზღვა.mw
@@ -4,6 +4,10 @@
 უძველესი დროიდან ხმელთაშუა ზღვა დატვირთული სატრანსპორტო მაგისტრალი იყო, რაც საშუალებას აძლევდა რეგიონის ამომავალ ერებს - ეგვიპტელებს, ბერძნებს, რომაელებსა და ახლო აღმოსავლეთის ხალხებს სავაჭრო და კულტურული გაცვლები ეწარმოებინათ. ხმელთაშუა ზღვას მნიშვნელოვანი ადგილი უჭირავს [[დასავლეთის ცივილიზაცია|დასავლეთის ცივილიზაციის]] დაბადებისა და განვითარების მიზეზთა შეცნობაში.
 
 ==სახელი==
+ხმელთაშუა ზღვის ლათინური სახელია mediterraneus (medius, 'შუა' + terra, 'მიწა, ხმელეთი'), ბერძნულში "mesogeios".
+
+ისტორიის მანძილზე მას ალტერნატიული სახელებიც ჰქონია. მაგ. რომაელები მას უწოდებდნენ Mare Nostrum (ლათ., ჩვენი ზღვა). ბიბლიაში მას მოიხსენიებენ, როგორც "დიდი ზღვა" ან "დასავლეთის ზღვა". თანამედროვე ებრაულში მას "ჰა-იამ ჰა-ტიხონ" (הים התיכון, შუა ზღვა) ჰქვია, რაც გერმანული ვერსიის Mittelmeer პირდაპირი ადაპტაციაა. თუქრულად მას Akdeniz (თეთრი ზღვა) ჰქვია. არაბულად "ალ-ბაჰრ ალ-აბიად ალ-მუტავასიტ" (البحر الأبيض المتوسط, შუა თეთრი ზღვა). ბრიტანეთში მას არაფორმალურად შემოკლებით "The Med"-ს უწოდებენ.
+
 ==გეოგრაფია==
 ==მოსაზღვრე ქვეყნები==
 ==სუბდანაყოფები==
