--- a/ზელიმხან_იანდარბიევი.mw
+++ b/ზელიმხან_იანდარბიევი.mw
@@ -1,4 +1,5 @@
-'''ზელიმხან (ზელიმხა) აბდულ-მუსლიმის ძე იანდარბიევი''' დაიბადა [[1952]] წლის [[12 სექტემბერი|12 სექტემბერს]] [[ყაზახეთი|ყაზახეთში]], გადასახლებაში მყოფ [[ჩეჩნები|ჩეჩენთა]] ოჯახში.საშუალო სკოლა დაამთავრა დაბა [[ძველი ათაგი|ძველ ათაგიში]].უმაღლესი განათლება მიიღო ჩეჩნეთ–ინგუშეთის უნივერსიტეტში,ფილოლოგიის ფაკულტეტზე.შემდგომ იანდარბიევი ასრულებს მ.გორკის სახ.ლიტერატურის ინსტიტუტის უმაღლეს კურსებს [[მოსკოვი|მოსკოვში]].მუშაობდა ჩეჩნეთ–ინგუშეთის წიგნის გამომცემლობაში.იყო პირველი რედაქტორი საბავშვო ჟურნალისა „სტელა ადი„. [[1985]] წლიდან იანდარბიევი სსრკ მწერალთა კავშირის წევრია. [[1991]] წლის აგვისტომდე იგი მუშაობდა ჩეჩნეთ–ინგუშეთის მწერალთა კავშირის ლიტერატურულ კონსულტანტად.
+[[სურათი:Zelimkhan.jpg|thumb|ზელიმხან იანდარბიევი]]
+'''ზელიმხან (ზელიმხა) აბდულ-მუსლიმის ძე იანდარბიევი''' დაიბადა [[1952]] წლის [[12 სექტემბერი|12 სექტემბერს]] [[ყაზახეთი|ყაზახეთში]], გადასახლებაში მყოფ [[ჩეჩნები|ჩეჩენთა]] ოჯახში. საშუალო სკოლა დაამთავრა დაბა [[ძველი ათაგი|ძველ ათაგიში]]. უმაღლესი განათლება მიიღო ჩეჩნეთ–ინგუშეთის უნივერსიტეტში,ფილოლოგიის ფაკულტეტზე.შემდგომ იანდარბიევი ასრულებს მ.გორკის სახ.ლიტერატურის ინსტიტუტის უმაღლეს კურსებს [[მოსკოვი|მოსკოვში]]. მუშაობდა ჩეჩნეთ–ინგუშეთის წიგნის გამომცემლობაში.იყო პირველი რედაქტორი საბავშვო ჟურნალისა „სტელა ადი„. [[1985]] წლიდან იანდარბიევი სსრკ მწერალთა კავშირის წევრია. [[1991]] წლის აგვისტომდე იგი მუშაობდა ჩეჩნეთ–ინგუშეთის მწერალთა კავშირის ლიტერატურულ კონსულტანტად.
 
 ==პოლიტიკური კარიერა==
 [[1989]] წლის ივნისში ზ.იანდარბიევმა ჩამოაყალიბა კომიტეტი '''„ბარტი„''',რომელიც [[1990]] წლიდან გარდაიქმნა '''ვაინახთა დემოკრატიული პარტია''', რომლის უმთავრეს მიზანს წარმოადგენდა [[ჩეჩნეთი|ჩეჩნეთის]] დამოუკიდებელი სახელმწიფოს შექმნა. 
