--- a/ნიკოლოზ_II_(რუსეთი).mw
+++ b/ნიკოლოზ_II_(რუსეთი).mw
@@ -6,3 +6,33 @@
 ==ბიოგრაფია==
 
 [[კატეგორია:რუსეთის იმპერია]]
+
+
+[[af:Nikolaas II van Rusland]]
+[[ca:Nicolau II de Rússia]]
+[[da:Nikolaj 2. af Rusland]]
+[[de:Nikolaus II. (Russland)]]
+[[en:Nicholas II of Russia]]
+[[et:Nikolai II]]
+[[es:Nicolás II de Rusia]]
+[[eo:Nikolao la 2-a (Rusio)]]
+[[fr:Nicolas II de Russie]]
+[[ko:러시아의 니콜라이 2세]]
+[[hr:Nikola II.]]
+[[io:Nikolai 2ma]]
+[[id:Nikolai II dari Rusia]]
+[[it:Nicola II di Russia]]
+[[he:ניקולאי השני]]
+[[la:Nicolaus II (imperator Russiae)]]
+[[lt:Nikolajus II]]
+[[nl:Nicolaas II van Rusland]]
+[[ja:ニコライ2世]]
+[[no:Nikolai II av Russland]]
+[[nn:Nikolai II av Russland]]
+[[pl:Mikołaj II Romanow]]
+[[pt:Nicolau II da Rússia]]
+[[ro:Nicolae al II-lea al Rusiei]]
+[[ru:Николай II]]
+[[fi:Nikolai II]]
+[[sv:Nikolaj II av Ryssland]]
+[[zh:尼古拉二世]]
