*Empty MediaWiki Message*

--- a/ბოსფორი.mw
+++ b/ბოსფორი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Istambul and Bosporus big.jpg|thumb|300px|ბოსფორის სრუტე, სატელიტური ფოტო, აპრილი 2004]]
-'''ბოსფორი''' (ბერძ. Βόσπορος ძროხის რქა, თურქ.: Boğaziçi, სტამბოლის სრუტე) [[სრუტე|სრუტეა]], რომელიც ჰყოფს [[თურქეთი|თურქეთის]] ევროპულსა ([[რუმელია]]) და აზიურ ([[ანატოლია]]) ნაწილებს. მსოფლიოს ყველაზე ვიწრო ყელია, რომელიც საერთაშორისო ნაოსნობისთვის გამოიყენება და ის [[მარმარისის ზღვა|მარმარისის ზღვას]] [[შავი ზღვა|შავ ზღვასთან]] აერთებს, რომელიც თავის მხრივ [[დარდანელი|დარდანელით]] [[ეგეოსის ზღვა|ეგეოსის ზღვას]] უერთდება [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვაში]]. მისი სიგრძე დაახ. 30 კმ-ია, მაქსიმალური სიგანით 3.700 მეტრი ჩრდილოეთ შესართავთან, და მინიმ. სიგანით 700 მეტრი. სიღმე მერყეობს 36-124 მეტრს შორის დინების შუაში.
+'''ბოსფორი''' (ბერძ. Βόσπορος ძროხის რქა, თურქ.: Boğaziçi, სტამბოლის სრუტე) [[სრუტე|სრუტეა]], რომელიც ჰყოფს [[თურქეთი|თურქეთის]] ევროპულსა ([[რუმელია]]) და აზიურ ([[ანატოლია]]) ნაწილებს. მსოფლიოს ყველაზე ვიწრო ყელია, რომელიც საერთაშორისო ნაოსნობისთვის გამოიყენება და ის [[მარმარილოს ზღვა|მარმარილოს ზღვას]] [[შავი ზღვა|შავ ზღვასთან]] აერთებს, რომელიც თავის მხრივ [[დარდანელი|დარდანელით]] [[ეგეოსის ზღვა|ეგეოსის ზღვას]] უერთდება [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვაში]]. მისი სიგრძე დაახ. 30 კმ-ია, მაქსიმალური სიგანით 3.700 მეტრი ჩრდილოეთ შესართავთან, და მინიმ. სიგანით 700 მეტრი. სიღმე მერყეობს 36-124 მეტრს შორის დინების შუაში.
 
 სრუტის ნაპირები მჭიდროდ დასახლებულია, მასზე მდებარეობს ქალაქი [[სტამბოლი]] (11 მილიონზე მეტი მცხოვრები).
 
