*Empty MediaWiki Message*

--- a/ნიკოლოზ_II_(რუსეთი).mw
+++ b/ნიკოლოზ_II_(რუსეთი).mw
@@ -1,11 +1,15 @@
 [[სურათი:Nikolai II 1.jpg|thumb|150px|ნიკოლაი II]]
-'''ნიკოლაი II''' ალეკსანდროვიჩი (''[[რუსული ენა|რუს.]]:'' Никола́й II Алекса́ндрович) (* [[18 მაისი]] [[1868]], [[ცარსკოე სელო]]; † [[17 ივლისი]] [[1918]], [[ეკატერინბურგი]]) - [[რუსეთის იმპერია|რუსეთის]] ბოლო იმპერატორი [[1894]]-[[1917]] წლებში.
+'''ნიკოლაი II''' ალეკსანდროვიჩი (''[[რუსული ენა|რუს.]]:'' Никола́й II Алекса́ндрович) (* [[18 მაისი]], [[1868]], [[ცარსკოე სელო]]; † [[17 ივლისი]], [[1918]], [[ეკატერინბურგი]]) - [[რუსეთის იმპერია|რუსეთის]] ბოლო იმპერატორი [[1894]]-[[1917]] წლებში.
 
 
 
 ==ბიოგრაფია==
-
+[[კატეგორია:რუსები]]
 [[კატეგორია:რუსეთის იმპერია]]
+[[კატეგორია:რუსეთის იმპერატორები]]
+[[კატეგორია:დაბადებული 1868 ]] 
+[[კატეგორია:გარდაცვლილი 1918]]
+
 
 
 [[af:Nikolaas II van Rusland]]
