*Empty MediaWiki Message*

--- a/ნიკოლოზ_II_(რუსეთი).mw
+++ b/ნიკოლოზ_II_(რუსეთი).mw
@@ -4,10 +4,13 @@
 ნიკოლაი II-ის სრული სახელი იყო ''ნიკოლაი ალეკსანდროვიჩ რომანოვი''. მისი ოფიციალური ტიტული - '''ნიკოლაი II, იმპერატორი და ავტოკრატი სრულიად რუსეთისა'''. ის ასევე ცნობილია, როგორც ''ნიკოლაი წამუბული'' (გაუსამართლებლად მოკვლის გამო) და ''ნიკოლაი სისხლიანი'' (მისი კორონაციის დროს მომხდარი ტრაგიკული მოვლენების გამო).
 
 ==ბიოგრაფია==
+{{ესკიზი}}
 
 [[კატეგორია:რუსეთის იმპერია]]
 [[კატეგორია:რუსეთის იმპერატორები]]
-
+[[კატეგორია:რუსები]]  	 
+[[კატეგორია:დაბადებული 1868 ]] 	 
+[[კატეგორია:გარდაცვლილი 1918]]
 
 [[af:Nikolaas II van Rusland]]
 [[ca:Nicolau II de Rússia]]
