sektziis satauri da dasatzqisi odnav shevtzvale dazustebis miznit. prchkhilebshi, autzilebeli magalitebi davamate.

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -111,7 +111,15 @@
 
 4) [[ჰუმანისტური იუდაიზმი]] პატარა არარელიგიური მოძრაობაა, რომლის მტკიცებით ებრაული ვინაობა ებრაელთა ისტორიითა და კულტურით განისაზღვრება, და არა წმინდა ტექსტებით. რაბინი შერვინ უაინის მიერ დაარსებული ეს მიმდინარეობა უფრო ჩრდილოეთ ამერიკაშია ცნობილი, მაგრამ მიმდევრები ჰყავს აგრეთვე ევროპაში, ლათინურ ამერიკაში და ისრაელშიც. (უნდა აღინიშნოს, რომ ვინაიდან ჰუმანისტური იუდაიზმი უარყოფს ზებუნებრივი ღმერთის ცნებას, რასაც სხვა ებრაული მიმდინარეობები იუდაიზმის საფუძვლად მიიჩნევენ, მისი ებრაულ მიმდინარეობად ჩათვლის საკითხი აზრთა უთანხმოებას იწვევს). 
 
-მართლმადიდებელ ებრაელთა უმრავლესობა ადამიანის ებრაელობას საზღვრავს არა იმით, თუ რომელი მიმდინარეობის მიმდევარია იგი, არამედ იმის მიხედვით, თუ რამდენად ახლოსაა მისი ღვთისმსახურების წესები მათ წესებთან. მართლმადიდებელ ებრაელთა აზრით, ებრაელი, რომელიც არ ასრულებს შაბათის, იომ-ტოვების (წმინდა დღეების), ქაშრუთისა და ოჯახური სიწმინდის კანონებს, მორწმუნედ არ უნდა ჩაითვალოს; ნებისმიერ ებრაელს, რომელიც თუნდაც, მხოლოდ ამ კანონებს შეასრულებს, ისინი ღვთის მსახურად და მორწმუნედ ჩათვლიან.         
+მართლმადიდებელ ებრაელთა უმრავლესობა ადამიანის ებრაელობას საზღვრავს არა იმით, თუ რომელი მიმდინარეობის მიმდევარია იგი, არამედ იმის მიხედვით, თუ რამდენად ახლოსაა მისი ღვთისმსახურების წესები მათ წესებთან. მართლმადიდებელ ებრაელთა აზრით, ებრაელი, რომელიც არ ასრულებს შაბათის, იომ-ტოვების (წმინდა დღეების), ქაშრუთისა და ოჯახური სიწმინდის კანონებს, მორწმუნედ არ უნდა ჩაითვალოს; ნებისმიერ ებრაელს, რომელიც თუნდაც, მხოლოდ ამ კანონებს შეასრულებს, ისინი ღვთის მსახურად და მორწმუნედ ჩათვლიან. 
+
+== ებრაული სექტორები ისრაელში ==
+
+მიუხედავად იმისა, რომ ზემოთ აღწერილ ყოველ მიმდინარეობას ისრაელშიც ჰყავს მიმდევრები, ამ ქვეყნის ებრაელები თავიანთ ვინაობას სხვა კატეგორიებით საზღვრავენ, რომლითაც ადამიანები მორწმუნეობის დონის მიხედვით იყოფიან. ეს კატეგორიაა მიგზარი, ანუ, ამ შემთხვევაში, გარკვეული ჩვეულებების მქონე საზოგადოების სექტორი. ისრაელში სამი ასეთი ძირითადი სექტორია: სეკულარისტი (''ხილონი''), ტრადიციონალისტი (''მასორათი'') და რელიგიოზი (''დათი'' ან ''ხარედი'') ებრაელებისა. ხილონებად თავს მიიჩნევენ ძირითადად ევროპული წარმოშობის (არარელიგიოზი) ებრაელები, რომლებიც საკუთარ ებრაელობას, შესაძლოა, დიდ მნიშვნელობას ანიჭებენ, მაგრამ ებრაული ვინაობა მათ არა ჰგონიათ ტრადიციულ რწმენაზე და კანონებზე დამოკიდებული. ხილონები უარყოფენ რელიგიური ცხოვრების ყოველ ფორმას, მართლმადიდებლურს თუ დასავლეთში უფრო მიღებულ ლიბერალურს (რეფორმისტულს და კონსერვატიულს). მასორათი (ტრადიციონალისტ) ებრაელებად თავს თვლიან ძირითადად "აღმოსავლელი" (ახლო აღმოსავლური, ჩრდილო-აფრიკული და ცენტრალურ-აზიური წარმოშობის) არარელიგიოზი ებრაელები. (ამ მასორათი ებრაელებს არავითარი კავშირი არა აქვთ კონსერვატიული იუდაიზმის მიმდევრებთან, რომლებსაც ებრაულად აგრეთვე მასორათები ეწოდებათ).
+
+ამ ტერმინებს - ხილონი და მასორათი - ისრაელში მეტად მრავალმნიშვნელოვნად იყენებენ. ამის მიზეზი ისაა, რომ როგორც სეკულარისტთა, ისე ტრადიციონალისტთა მნიშვნელოვან ნაწილს, მათ შორის არსებული განსხვავებების მიუხედავად, არცთუ ცოტა საერთო თვისება ახასიათებს,- როგორც იდეოლოგიურად, ისე ებრაული კანონების შესრულების მხრივ. (სეკულარისტთა უმრავლესობა თითქმის არასოდეს არ ლოცულობს, არც შაბათისა და ქაშრუთის, ანუ კვების, წესებს იცავს; მეორე მხრივ, სეკულარისტთა უმრავლესობა ტრადიციულად ასრულებს ჩვილ ვაჟთა წინადაცვეთის, საქორწილო ცერემონიის, მარხვა-გლოვის, ფესახში პურეული საკვების აღკვეთისა და ქიფურის დღის მარხულობის რელიგიურ წესებს. ტრადიციონალისტები, ბოლოს ჩამოთვლილი წესების გარდა, უფრო ხშირადაც ლოცულობენ, შაბათობით სინაგოგაში დადიან და ქაშრუთის კანონებს ასრულებენ; მიუხედავად ამისა, ტრადიციონალისტთა უმრავლესობა შაბათის ბევრ კანონს არღვევს და საერთოდ, სეკულარისტთა მსგავსად, ცხოვრების დასავლური სტილის მიმდევარია).    
+  
+        
         
  
          
