*Empty MediaWiki Message*

--- a/ოსტანკინოს_ტელეანძა.mw
+++ b/ოსტანკინოს_ტელეანძა.mw
@@ -12,6 +12,7 @@
 [[fr:Tour Ostankino]]
 [[hu:Osztankinói tévétorony]]
 [[ja:オスタンキノ・タワー]]
+[[pl:Wieża telewizyjna Ostankino]]
 [[pt:Torre Ostankino]]
 [[ru:Останкинская телебашня]]
 [[tt:Ostankino manarası]]
