*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_პ.mw
+++ b/ცნობილი_ქართველები:_პ.mw
@@ -28,8 +28,8 @@
 * [[პაჭკორია, ოტია]] - მწერალი, კრიტიკოსი
 
 ==პე==
-* [[პეტრე, V ს.]] - ქართლის პირველი კათოლიკოსი
-* [[პეტრე, XI ს.]] - საქართველოს მწიგნობართუხუცესი
+* [[პეტრე (V ს.)]] - ქართლის პირველი კათოლიკოსი
+* [[პეტრე (XI ს.)]] - საქართველოს მწიგნობართუხუცესი
 * [[პეტრე გელათელი]] - ჰიმნოგრაფი
 * [[პეტრე იბერი]] - თეოლოგი და ფილოსოფოსი
 * [[პეტრიაშვილი, ვასილ]] - ქიმიკოსი
