--- a/პეტრე.mw
+++ b/პეტრე.mw
@@ -1,9 +1,10 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი '''პეტრე''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
-* [[პეტრე, V ს.]] - ქართლის პირველი კათალიკოსი
-* [[პეტრე, XI ს.]] - საქართველოს მწიგნობართუხუცესი
+* [[პეტრე (V ს.)]] - ქართლის პირველი კათოლიკოსი
+* [[პეტრე (XI ს.)]] - საქართველოს მწიგნობართუხუცესი
 * [[პეტრე გელათელი]] - ჰიმნოგრაფი
 * [[პეტრე იბერი]] - თეოლოგი და ფილოსოფოსი
+
+
+{{მრავალმნიშვნელოვანი}}
