*Empty MediaWiki Message*

--- a/ტორონტოს_ტელეანძა.mw
+++ b/ტორონტოს_ტელეანძა.mw
@@ -1,5 +1,5 @@
 [[სურათი:Cntower2.jpg|thumb|300px|ტორონტოს ტელეანძა ონტარიოს ტბიდან]]
-'''ტორონტოს ტელეანძა''' (CN Tower) ყველაზე მაღალი ცაკლე მდგომი სტრუქტურაა მსოფლიოში, 553,33 მეტრი სიმაღლით. მდებარეობს [[ტორონტო|ტორონტოში]], [[ონტარიო]], [[კანადა]] და ქალაქის სიმბოლოდ ითვლება (გეოგრ. კოორდ. 43°38′33.24″N, 79°23′13.7″W). მას ყოველწლიურად ორ მილიონზე მეტი დამთვალიერებელი ჰყავს.
+'''ტორონტოს ტელეანძა''', ასევე '''კანადის ეროვნული ტელეანძა''' (CN Tower) ყველაზე მაღალი ცაკლე მდგომი სტრუქტურაა მსოფლიოში, 553,33 მეტრი სიმაღლით. მდებარეობს [[ტორონტო|ტორონტოში]], [[ონტარიო]], [[კანადა]] და ქალაქის სიმბოლოდ ითვლება (გეოგრ. კოორდ. 43°38′33.24″N, 79°23′13.7″W). მას ყოველწლიურად ორ მილიონზე მეტი დამთვალიერებელი ჰყავს.
 
 ტორონტოს ტელეანძის მშენებლობა 1973 წლის 6 თებერვალს დაიწყო ''კანადის ნაციონალური რკინიგზის'' მიერ, რომელსაც მძლავრი ტელე-რადიო საკომუნიკაციო პლატფორმა სჭირდებოდა დიდ ტორონტოს რეგიონში, და ასევე ნაწილობრივ კანადის ინდუსტრიის სიმძლავრის დემონსტრირებისთვის. პროექტის ჯგუფის მთავარი წევრები იყვნენ კომპანიები NCK Engineering როგორც სტრუქტურის ინჟინრები; John Andrews Architects; Webb, Zerafa, Menkes, Housden Architects; Foundation Building Construction და Canron (აღმოსავლეთის სტრუქტურის განყოფილება).
 
