*Empty MediaWiki Message*

--- a/იოანე_ჭყონდიდელი.mw
+++ b/იოანე_ჭყონდიდელი.mw
@@ -1,5 +1,5 @@
-'''იოანე ჭყონდიდელი''', [[ჭყონდიდი|ჭყონდიდის]] [[მთავარეპისკოპოსი]] დაახლოებით [[1060]] - XII საუკუნის 10-იან წლებში. იხსენიება სვინგელოზის ტიტულით. XI საუკუნის 50-იან წლებში, ჯერ კიდევ ერისკაცობაში, თავის ძმასთან პეტრიკთან ერთად თან ახლდა [[ბაგრატ IV|ბაგრატ IV-ს]] და დედოფალ მარიამს [[კონსტანტინოპოლი|კონსტანტინოპოლში]], ბიზანტიის იმპერატორ [[კონსტანტინე IX]] მონომაქოსის ([[1042]]-[[1054]]) კარზე. აქ ისინი შეხვდნენ ათონიდან ჩამოსულ [[გიორგი მთაწმინდელი|გიორგი მთაწმინდელს]] და ათონში დიდი შესაწირავი გაატანეს, რისთვისაც იოანეს და მის ძმას ათონში [[აღაპი]] დაუწესეს. [[1059]] წელს მან ბაგრატ IV-ის დავალებით [[ანტიოქი|ქ. ანტიოქიიდან]] საქართველოში ჩამოიყვანა გიორგი მთაწმინდელი, რომლის ინიციატივით იოანე ჭყონდიდლად აკურთხეს.  იოანე ჭყონდიდელი დაეხმარა გიორგი მთაწმინდელს საქართველოში დარღვეული საეკლესიო საქმეების გამართვა-მოწესრიგებაში. [[1065]] და [[1066]]-[[1067]] ბაგრატ IV-ის [[ელჩი]] იყო ბიზანტიის იმპერატორის კარზე. ამ ელჩობის დროს  იოანე ჭყონდიდელს [[გიორგი ხუცესმონაზონი|გიორგი ხუცესმონაზონისთვის]] უთხოვია დაეწერა გიორგი მთაწმინდელის ცხოვრება.
+'''იოანე ჭყონდიდელი''', [[ჭყონდიდი|ჭყონდიდის]] [[მთავარეპისკოპოსი]] დაახლოებით [[1060]] - XII საუკუნის 10-იან წლებში. იხსენიება სვინგელოზის ტიტულით. XI საუკუნის 50-იან წლებში, ჯერ კიდევ ერისკაცობაში, თავის ძმასთან [[პეტრე (XI ს.)|პეტრიკთან]] ერთად თან ახლდა [[ბაგრატ IV|ბაგრატ IV-ს]] და დედოფალ მარიამს [[კონსტანტინოპოლი|კონსტანტინოპოლში]], ბიზანტიის იმპერატორ [[კონსტანტინე IX]] მონომაქოსის ([[1042]]-[[1054]]) კარზე. აქ ისინი შეხვდნენ ათონიდან ჩამოსულ [[გიორგი მთაწმინდელი|გიორგი მთაწმინდელს]] და ათონში დიდი შესაწირავი გაატანეს, რისთვისაც იოანეს და მის ძმას ათონში [[აღაპი]] დაუწესეს. [[1059]] წელს მან ბაგრატ IV-ის დავალებით [[ანტიოქი|ქ. ანტიოქიიდან]] საქართველოში ჩამოიყვანა გიორგი მთაწმინდელი, რომლის ინიციატივით იოანე ჭყონდიდლად აკურთხეს.  იოანე ჭყონდიდელი დაეხმარა გიორგი მთაწმინდელს საქართველოში დარღვეული საეკლესიო საქმეების გამართვა-მოწესრიგებაში. [[1065]] და [[1066]]-[[1067]] ბაგრატ IV-ის [[ელჩი]] იყო ბიზანტიის იმპერატორის კარზე. ამ ელჩობის დროს  იოანე ჭყონდიდელს [[გიორგი ხუცესმონაზონი|გიორგი ხუცესმონაზონისთვის]] უთხოვია დაეწერა გიორგი მთაწმინდელის ცხოვრება.
 
 
-[[კატეგორია:ქართველები]]
+
 [[კატეგორია:ქართველი სასულიერო მოღვაწეები]]
