*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ი.mw
+++ b/ცნობილი_ქართველები:_ი.mw
@@ -21,6 +21,7 @@
 * [[იაშვილი, რევაზ]] - კერამიკოსი
 
 ==იე==
+* [[იეზეკიელი]] - სასულიერო პოეტი
 * [[იეთიმ გურჯი]] - სახალხო მომღერალი-მელექსე
 * [[იესე (ალიყული-ხანი)|იესე ]] - ქართლის მეფე
 * [[იესე ქსნის ერისთავი]] - პოლიტიკური მოღვაწე
