*Empty MediaWiki Message*

--- a/ტორონტოს_ტელეანძა.mw
+++ b/ტორონტოს_ტელეანძა.mw
@@ -1,5 +1,5 @@
 [[სურათი:Cntower2.jpg|thumb|300px|ტორონტოს ტელეანძა ონტარიოს ტბიდან]]
-'''ტორონტოს ტელეანძა''', ასევე '''კანადის ეროვნული ტელეანძა''' (CN Tower) ყველაზე მაღალი ცაკლე მდგომი სტრუქტურაა მსოფლიოში, 553,33 მეტრი სიმაღლით. მდებარეობს [[ტორონტო|ტორონტოში]], [[ონტარიო]], [[კანადა]] და ქალაქის სიმბოლოდ ითვლება (გეოგრ. კოორდ. 43°38′33.24″N, 79°23′13.7″W). მას ყოველწლიურად ორ მილიონზე მეტი დამთვალიერებელი ჰყავს.
+'''ტორონტოს ტელეანძა''', ასევე '''კანადის ეროვნული ტელეანძა''' (CN Tower) ყველაზე მაღალი ცალკე მდგომი სტრუქტურაა მსოფლიოში, 553,33 მეტრი სიმაღლით. მდებარეობს [[ტორონტო|ტორონტოში]], [[ონტარიო]], [[კანადა]] და ქალაქის სიმბოლოდ ითვლება (გეოგრ. კოორდ. 43°38′33.24″N, 79°23′13.7″W). მას ყოველწლიურად ორ მილიონზე მეტი დამთვალიერებელი ჰყავს.
 
 ტორონტოს ტელეანძის მშენებლობა 1973 წლის 6 თებერვალს დაიწყო ''კანადის ნაციონალური რკინიგზის'' მიერ, რომელსაც მძლავრი ტელე-რადიო საკომუნიკაციო პლატფორმა სჭირდებოდა დიდ ტორონტოს რეგიონში, და ასევე ნაწილობრივ კანადის ინდუსტრიის სიმძლავრის დემონსტრირებისთვის. პროექტის ჯგუფის მთავარი წევრები იყვნენ კომპანიები NCK Engineering როგორც სტრუქტურის ინჟინრები; John Andrews Architects; Webb, Zerafa, Menkes, Housden Architects; Foundation Building Construction და Canron (აღმოსავლეთის სტრუქტურის განყოფილება).
 
@@ -8,7 +8,11 @@
 
 ლითონის კიბე 1.776 საფეხურით აღწევს სკაი-პოდის დონემდე (447 მ/147 სართული) და ყველაზე მაღალი ლითონის კიბეა დედამიწაზე. ეს კიბე მხოლოდ ავარიულ შემთხვევაში გამოყენების მიზნით არის დამონტაჟებული და საზოგადოებისთვის დახურულია, წელიწადში ორჯერ საქველმოქმედო მიზნებით ჩატარებული კიბეზე ასვლის ღონისძიებების გამონაკლისის გარდა. საშუალო ამსვლელი კიბის თავთან მიღწევას დაახ. 30 წუთს ანდომებს, ხოლო ყველაზე სწრაფი ამსვლელის რეკორდი დღემდე იყო 7 წუთი და 52 წამი.
 
-ტელეანძის სათაურში აკრონიმი CN კანადის ნაციონალური რკინიგზის (Canadian National Railway) აღმნიშვნელია, რომელმაც ეს პროექტი წამოიწყო, თუმცა 1995 წლის პრივატიზაციის შემდეგ ანძა კანადის მიწათა კომპანიის (Canada Lands Company) საკუთრება გახდა. ტორონტოს მოქალაქეების სურვილით ანძას ძველი სახელი დარჩა და ამჟამად აკრონიმი CN ოფიციალურად "კანადის ეროვნულს" ნიშნავს.
+ტელეანძის სათაურში აკრონიმი CN პროექტის წამომწყები კანადის ნაციონალური რკინიგზის (Canadian National Railway) აღმნიშვნელია. 1995 წლის პრივატიზაციის შემდეგ ანძა კანადის მიწათა კომპანიის (Canada Lands Company) საკუთრება გახდა. თუმცა ტორონტოს მოქალაქეების სურვილით ანძას ძველი სახელი დარჩა და ამჟამად აკრონიმი CN ოფიციალურად "კანადის ეროვნულს" ნიშნავს.
+
+342 მეტრის ნიშნულზე შემინული სართული და პანორამის ღია სათვალთვალო ტერასა მდებარეობს. 346 მეტრის ნიშნულზე კი "ჰორაიზონს კაფეა" და დახურული სათვალთვალო დარბაზია. 360 მეტრის სიმაღლეზე მბრუნავი რესტორანი "360" მდებარეობს, რემელიც სრულ ბრუნს ყოველ 72 წუთში ასრულებს.
+
+სკაი-პოდი (Sky Pod) მცირე დახურული პლატფორმაა 447 მ. სიმაღლეზე და მსოფლიოში ყველაზე მაღალი საზოგადოებრივი პანორამული სათვალთვალო დეკია. აქედან მოწმენდილ ამინდში ხედვადობა 120 კმ-ს აღწევს და [[ონტარიო (ტბა)|ონტარიოს]] ტბის გაღმა აშშ-ის ტერიტორიაზე მდებარე ქ. [[როჩესტერი|როჩესტერის]] სილუეტის დანახვა შეიძლება.
 
 
 
