--- a/26_ივნისი.mw
+++ b/26_ივნისი.mw
@@ -4,6 +4,7 @@
 == დღის მოვლენები ==
 *[[1483]] : [[რიჩარდი III]] [[ინგლისი|ინგლისის]] მეფე გახდა.
 *[[1960]] : [[მადაგასკარი|მადაგასკარმა]] დამოუკიდებლობა გამოაცხადა [[საფრანგეთი|საფრანგეთისაგან]].
+*[[1976]] : გაიხსნა [[ტორონტოს ტელეანძა]] - უმაღლესი ცალკე მდგომი სტრუქტურა მსოფლიოში.
 
 == ამ დღეს დაბადებულნი ==
 *[[1892]] : [[ბაკი, პერლ]] – ამერიკელი მწერალი (გ.[[1973]])
