*Empty MediaWiki Message*

--- a/პეტრე_იბერი.mw
+++ b/პეტრე_იბერი.mw
@@ -1,10 +1,24 @@
-'''პეტრე იბერი''' (* [[411]] ―   †  [[491]]), გამოჩენილი ქართველი თეოლოგი და ფილოსოფოსი, ქრისტიანული ნეოპლატონიზმის ფუძემდებელი და თვალსაჩინო წარმომადგენელი. ერისკაცობაში მურვანი (სირიული წყაროებით - ნაბარნუგი), იყო იბერიის მეფის ბუზმარის შვილი, ბაკურ დიდის შვილიშვილი. მის აღმზრდელად კოლხეთიდან მოუწვევიათ ცნობილი ქართველი ფილოსოფოსი მითრიდატე ლაზი. მურვანი ამალითურთ 423 ბიზანტიის კეისრის თეოდოსიუს II-ის მოთხოვნით მძევლად წარგზავნეს კონსტანტინოპოლს. აქ ქართველ უფლისწულის სწავლა-აღზრდის საქმეს მითრიდატე ლაზთან ერთად ხელმძღვანელობდა კეისრის მეუღლე დედოფალი ევდოკია. მურVანს ბავშვობიდანვე დიდი ნიჭი გამოუჩენია და ბრწყინვალე განათლება მიუღია, შეუთვისებია "ყოველივე სწავლულება, საეკლესიო და საფილოსოფოსო" (ქართლის ცხოვრება). 
+'''პეტრე იბერი''' (* [[411]] ―   †  [[491]]), გამოჩენილი ქართველი თეოლოგი და ფილოსოფოსი, ქრისტიანული ნეოპლატონიზმის ფუძემდებელი და თვალსაჩინო წარმომადგენელი. ერისკაცობაში ''მურვანი'' (სირიული წყაროებით - ''ნაბარნუგი''), იყო იბერიის მეფის ბუზმარის შვილი, ბაკურ დიდის შვილიშვილი. მის აღმზრდელად კოლხეთიდან მოუწვევიათ ცნობილი ქართველი ფილოსოფოსი [[იოანე ლაზი|მითრიდატე ლაზი]]. მურვანი ამალითურთ [[423]] წელს ბიზანტიის კეისრის [[თეოდოსიუს II|თეოდოსიუს II-ის]] მოთხოვნით მძევლად წარგზავნეს კონსტანტინოპოლს. აქ ქართველ უფლისწულის სწავლა-აღზრდის საქმეს მითრიდატე ლაზთან ერთად ხელმძღვანელობდა კეისრის მეუღლე დედოფალი ევდოკია. მურვანს ბავშვობიდანვე დიდი ნიჭი გამოუჩენია და ბრწყინვალე განათლება მიუღია, შეუთვისებია "ყოველივე სწავლულება, საეკლესიო და საფილოსოფოსო" (ქართლის ცხოვრება). 
+
+ცნობების თანახმად, მურვანი ბიზანტიაში უსმენდა გამოჩენილ სწავლულებსა და ფილოსოფოსებს. მისი ბიოგრაფის [[ზაქარია ქართველი|ზაქარია ქართველის]] გადმოცემით, უფლისწულს თავისი განსწავლულობით, ბერძნულის ცოდნითა და გონებამახვილობით განცვიფრებაში მოჰყავდა მეფე და სასახლის ფილოსოფოსები. იერუსალიმში ყოფნის დროს მას შესანიშნავად აუთვისებია სირიული ენა და მწერლობა. სამშობლოდან მოწყვეტილ მურვანს არ აკმაყოფილებს იმპერატორის სასახლე, მისი დიოფიზიტური იდეოლოგია, გაბატონებული წრეების ცხოვრების წესი, რის გამოც იგი რამდენიმე ქართველთან ერთად გაიპარა სასახლიდან და პალესტინაში გადასახლდა. მათ შორის მითრიდატე ლაზისა და ზაქარია ქართველის ყოფნა წყაროებითაა დადასტურებული. 
+
+იერუსალიმში მურვანი და მითრიდატე აღიკვეცნენ ბერებად, გამოიცვალეს სახელები (მურვანი - პეტრე, ხოლო მითრიდატე - იოანე). 445 წელს ისინი აკურთხეს მღვდლებად. მათ შეოიარეს ახლო და შუა აღმოსავლეთის მრავალი ქვეყანა, დამკვიდტდნენ მაიუმში ქ.ღაზის მაზლობლად, სადაც ეწეოდნენ დიდ ფილოსოფიურ-იდეოლოგიურ მოღვაწეობას.
+
+პეტრე იბერი გახდა ერთ-ერთი უსაჩინოესი წარმომადგენელი V საუკუნის II ნახევრის ფილოსოფიურ-თეოლოგიურ აზროვნებისა. 452 პეტრე იბერი მაიუმის ეპისკოპოსად დანიშნეს. [[ზაქარია რიტორი]] მას "მსოფლიოში განსაცვიფრებლად სახელგანთქმულ ადამიანს" უწოდებდა, [[იოანე რუფუსი]] კი - "ჩვენს პავლეს", "მეორე მოციქულ პავლეს" და "მეორე მოსეს", ხოლო ზაქარია ქართველის გამოთქმით, "იგი იყო მშვენება და დიდება საქართველოსი და მცველი მთელი ქვეყნისა". 
+
+პეტრე იბერმა ააშენა ქართველთა მონასტერი და შექმნა სკოლა, რომლის ბირთვს სირიაში მყოფი ქართველები შეადგენდნენ. სკოლაში იყვნენ არაქართველებიც:ბერძნები, სირიელები და სხვა. არსებობს მოსაზრება, რომ ამ სკოლაში სწავლამიღებული ქართველები VI საუკუნეში სამშობლოში დაბრუნდნენ, რაც ქართულ ისტოგრაფიაში [[ასურელი მამები|ასურელ მამათა]] მოსვლის სახელითაა ცნობილი.
+
+პეტრე იბერი ავტორია დიდმნიშვნელოვანი წიგნებისა, თუმცა მისი სახელით ჩვენამდე ეს წიგნები არ არის მოღწეული. პეტრე იბერის ბიოგრაფიების მიერ მოწოდებული ცნობების საფუძველზე [[ნუცუბიძე, შალვა|შ. ნუცუბიძემ]] და [[ჰონიგმანი, ერნესტ|ე. ჰონიგმანმა]] იგი აღიარეს [[არეოპაგიტიკა|არეოპაგიტიკის]] ავტორად.
+
+
 
 
 {{ესკიზი}}    
 
 
 
+[[en:Peter the Iberian]]
+[[hu:Ibériai Péter]]
 
 
 
