--- a/პეტრე_იბერი.mw
+++ b/პეტრე_იბერი.mw
@@ -10,7 +10,7 @@
 
 პეტრე იბერი ავტორია დიდმნიშვნელოვანი წიგნებისა, თუმცა მისი სახელით ჩვენამდე ეს წიგნები არ არის მოღწეული. პეტრე იბერის ბიოგრაფიების მიერ მოწოდებული ცნობების საფუძველზე [[ნუცუბიძე, შალვა|შ. ნუცუბიძემ]] და [[ჰონიგმანი, ერნესტ|ე. ჰონიგმანმა]] იგი აღიარეს [[არეოპაგიტიკა|არეოპაგიტიკის]] ავტორად.
 
-
+პეტრე იბერის თეორიული მოღვაწეობა დამაკავშირებელი ხიდია ანტიკურობისა ქრისტიანობასთან. საჭირო იყო ანტიკური ფილოსოფიის სათანადო გადამუშავება და მკაცრი რედაქტირება, რის შედეგად იგი ქრისტიანობისათვის მისაღებ ფორმას შეიძენდა და ანტიკური ფილოსოფიის უკანასკნელი წარმომადგენლის - [[პროკლე]] დიადოქოსის მიერ მიღებულ ძირითად შედეგებსაც შეინარჩუნებდა. ეს ისტორიული ამოცანა პეტრე იბერმა საკმაო წარმატებით გადაჭრა. მისი ზოგიერთი შეხედულება ეკლესიისათვის მიუღებელი აღმოჩნდა. პეტრე იბერმა ნეოპლატონური წყებათა ანუ "სირათა" შესახებ შეცვალა აუცილებლობასთან დაკავშირებული იერარქიის პრინციპით, რომლის მიხედვით, პირველი მიზეზიდან გამოიყვანებოდა პირველი შედეგი და არა არსებობის ყველა საფეხური. ასე გაგებული იერარქიის  პრინციპი ეკლესიისათვის მიუღებელი იყო. პეტრე იბერის მოძღვრება ადამიანის ღმერთამდე ამაღლებისა და ყველა საგნის ღმერთში დაბრუნების შესახებ განზე ტოვებდა ქრისტიანულ წარმოდგენებს საიქიო მიზღვის, მონანიების, ტანჯვისა და გამოსყიდვის შესახებ.
 
 
 {{ესკიზი}}    
