*Empty MediaWiki Message*

--- a/ტორონტოს_ტელეანძა.mw
+++ b/ტორონტოს_ტელეანძა.mw
@@ -14,9 +14,21 @@
 
 სკაი-პოდი (Sky Pod) მცირე დახურული პლატფორმაა 447 მ. სიმაღლეზე და მსოფლიოში ყველაზე მაღალი საზოგადოებრივი პანორამული სათვალთვალო დეკია. აქედან მოწმენდილ ამინდში ხედვადობა 120 კმ-ს აღწევს და [[ონტარიო (ტბა)|ონტარიოს]] ტბის გაღმა აშშ-ის ტერიტორიაზე მდებარე ქ. [[როჩესტერი|როჩესტერის]] სილუეტის დანახვა შეიძლება.
 
+==შედარებები==
+1995 წელს ამერიკის სამოქალაქო ინჟინერთა საზოგადოებამ ტორონტოს ტელეანძა თანამედროვე შვიდ საოცრებათაგან ერთ-ერთად დაასახელა. ის ეკუთვნის უდიდესი კოშკების მსოფლიო ფედერაციას. 1996 წელს გინესის რეკორდების წიგნმა ის მსოფლიოს უმაღლეს შენობად და ცალკე მდგომ სტრუქტურად" დაასახელა და ნაგებობა დღემდე ინარჩუნებს ამ ტიტულს.
 
+არსებობს სხვა უფრო მაღალი სტრუქტურები, თუმცა მათ ცალკე მდოგომი ნაგებობის სტატუსი არა აქვთ. გამონაკლისია [[პეტრონიუსის ტაუერი]] (ნავთობ პლატფორმა), რომელიც 645 მეტრისაა და უმაღლესი ცალკე მდგომი სტრუქტურაა, თუმცა მისი თავის გარდა ის მთლიანად წყალქვეშაა. [[ბურჯ დუბაი]], რომელიც 2008 წელს უნდა დასრულდეს, შენობის დეველოპერთა მტკიცებით, ტორონტოს ტელეანძას გაუსწრებს სიმაღლით.
 
-{{ითარგმნება}}
+==საინტერესო ფაქტები==
+*ტორონტოს ტელეანძა 20 მეტრით მაღალია მოსკოვის [[ოსტანკინოს ტელეანძა|ოსტანკინოს ტელეანძაზე]].
+*ტორონტოს ტელეანძას წელიწადში მეხი 76-ჯერ არტყამს.
+*ტორონტოს ტელეანძის ქარწინაღობა 420კმ/ს-ია.
+*მისი ლიფტები 22კმ/ს სიჩქარით მოძრაობს და 58 წამი სჭირდება ლუკაუტ სათვალთვალო პლატფორმაზე ასასვლელად.
+*ტორონტოს ტელეანძა თითქმის ორჯერ მაღალია [[ეიფელის კოშკი|ეიფელის კოშკზე]].
+*120 მილი/სთ-ში ქარის პირობებში ანძა 1.07 მეტრით იხრება ანტენის ცენტრიდან, 0,46 მ-ით სკაიპოდიდან, და 22,9 სმ-ით მთავარი პოდიდან.
+*ტორონტოს ტელეანძას შეუძლია გაუძლოს 8,5 მაგნიტუდის მიწისძვრას ([[რიხტერის შკალა|რიხტერის შკალით]]).
+*1979 წელს ორ მუშას როიალის კიბით ანძის ზემო პლატფორმაზე ატანაში 7,5 საათი დასჭირდა.
+
 
 [[კატეგორია:ცალკე მდგომი სტრუქტურები]]
 [[კატეგორია:მსოფლიოს უმაღლესი სტრუქტურები]]
