--- a/ტორონტოს_ტელეანძა.mw
+++ b/ტორონტოს_ტელეანძა.mw
@@ -3,8 +3,8 @@
 
 ტორონტოს ტელეანძის მშენებლობა 1973 წლის 6 თებერვალს დაიწყო ''კანადის ნაციონალური რკინიგზის'' მიერ, რომელსაც მძლავრი ტელე-რადიო საკომუნიკაციო პლატფორმა სჭირდებოდა დიდ ტორონტოს რეგიონში, და ასევე ნაწილობრივ კანადის ინდუსტრიის სიმძლავრის დემონსტრირებისთვის. პროექტის ჯგუფის მთავარი წევრები იყვნენ კომპანიები NCK Engineering როგორც სტრუქტურის ინჟინრები; John Andrews Architects; Webb, Zerafa, Menkes, Housden Architects; Foundation Building Construction და Canron (აღმოსავლეთის სტრუქტურის განყოფილება).
 
+[[სურათი:Cntower unfinished.jpg|thumb|left|ტორონტოს ტელეანძა მშენებლობის პროცესში, 1976.]]<br>
 [[სურათი:CNTowerLookingStraightUp.JPG|thumb|left|ტორონტოს ტელეანძა მის ფერხთით.]]
-[[სურათი:Cntower unfinished.jpg|thumb|left|ტორონტოს ტელეანძა მშენებლობის პროცესში, 1976.]]
 პროექტზე მუშაობა დღე-ღამის განმავლობაში განუწყვეტლივ მიმდინარეობდა (შაბათ-კვირის გარდა) დაახ. 40 თვის განმავლობაში 1.537 მუშის მიერ და საბოლოოდ [[1976]] წლის [[26 ივნისი|26 ივნისს]] გაიხსნა. სტრუქტურის მოკლეტალღოვანი მიმღებები შორეული სიგნალებისთვის 338 მეტრზეა დამონტაჟებული, ხოლო ტრანსმისიის ანტენა კი ანძის თავზეა მოთავსებული. მშენებლობა დაახ. $300 მილიონი [[კანადური დოლარი]] ($260 მილიონი აშშ-ის დოლარი 2005 წლის კურსით) დაჯდა და თვითღერებულება ამოღებულ იქნა 15 წელიწადში.
 
 ლითონის კიბე 1.776 საფეხურით აღწევს სკაი-პოდის დონემდე (447 მ/147 სართული) და ყველაზე მაღალი ლითონის კიბეა დედამიწაზე. ეს კიბე მხოლოდ ავარიულ შემთხვევაში გამოყენების მიზნით არის დამონტაჟებული და საზოგადოებისთვის დახურულია, წელიწადში ორჯერ საქველმოქმედო მიზნებით ჩატარებული კიბეზე ასვლის ღონისძიებების გამონაკლისის გარდა. საშუალო ამსვლელი კიბის თავთან მიღწევას დაახ. 30 წუთს ანდომებს, ხოლო ყველაზე სწრაფი ამსვლელის რეკორდი დღემდე იყო 7 წუთი და 52 წამი.
